# tables

./: .gitignore  LICENSE  README.md  setup.cfg  tables.output.txt  tables.py
mock-data/: database-connections.json
new-html-shit/: Table.py  tables.py  tables2.py
new-html-shit/html/: JS-RAW-TABLE-DATA.js  index.html  main.js  style.css
src/: CliArgs.py  ConfigData.py  Controller.py  DbConnection.py  Row.py  Table.py  TableList.py  TableTypes.py  Utilities.py  constants.py  main.py  main2_.py  tables.py  test.py
src/del-folder/: a.txt
src/html/: main.js  style.css
src/html/classes/: Row.js  Table.js
src/tables/: __main__.py  cli.py  constants.py  data_access.py  errors.py  main.py  printers.py  prompts.py  serializers.py  services.py
src/tables/cli/: __init__.py  args.py  choices.py  routines.py
src/tables/commands/: __init__.py  base.py  base_command.py  view.py
src/tables/domain/: constants.py  enums.py  errors.py  maps.py  models.py  views.py
src/tables/persistence/: data_access.py  json_encoder.py  services.py
src/tables/schemas/: __init__.py  base.py  schemas.py
src/tables/sql/: __init__.py  engine.py  statements.py
src/tables/utilities/: prettytables.py  printers.py  prompts.py  routines.py  serializers.py
src2/: Row.py
src2/html/classes/: HtmlGenerator.js
