[metadata]
name = mysql-tables
version = 0.4.1
description = Quickly view a MySQL database table schemas from the command line.
project_urls =
    Documentation = https://github.com/rrickgauer/tables
    Source Code = https://github.com/rrickgauer/tables
    Issue Tracker = https://github.com/rrickgauer/tables/issues
author = Ryan Rickgauer
author_email = rrickgauer1@gmail.com

[options]
packages=find:
package_dir = = src
install_requires =
    prettytable
    pymysql @ git+https://github.com/rrickgauer/pymysql.git

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    tables = tables.main:run